<?xml version="1.0"?>
<package format="3">
  <name>noether_ros</name>
  <version>0.1.1</version>
  <description>ROS2 integration for Noether</description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>noether_gui</depend>
  <depend>noether_tpp</depend>
  <depend>rviz_common</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>tf2_eigen</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
